--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   <header class="page-header">
     <nav class="navigation">
       <a class="navigation-logo" href="index.html">
-        <img class="page-header-logo" alt="Логотип гостиницы «SEDONA»" src="images/logohotelsedona.png">
+        <img class="page-header-logo"  src="images/logohotelsedona.svg" width="139" height="70" alt="Логотип гостиницы «SEDONA»">
       </a>
       <ul class="navigation-list">
         <li class="navigation-item">
@@ -27,11 +27,14 @@
         <li class="navigation-item">
           <a class="navigation-link" href="#">
             <span class="visually-hidden">Поиск</span>
+            <img class="navigation-icon" src="images/icons/search.svg" width="18" height="18" alt="Иконка поиск">
           </a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">
             <span class="visually-hidden">Избранное</span>
+            <img class="navigation-icon" src="images/icons/favorite.svg" width="18" height="17" alt="Иконка избранное">
+            <img class="navigation-icon" src="images/icons/number-icon.svg" width="20" height="20" alt="Иконка цифра">
           </a>
         </li>
         <li class="navigation-item">
@@ -161,7 +164,7 @@
       <ul class="hotel-list">
         <li class="hotel-card">
           <a href="#" class="hotel-image-container">
-            <img class="hotel-card-image" src="images/hotel-1.jpg" width="180" height="120"
+            <img class="hotel-card-image" src="images/catalog-hotels/hotel-1.jpg" width="300" height="206"
               alt="Amara Resort & Spa Гостиница.">
           </a>
           <div class="hotel-card-content-container">
@@ -180,7 +183,7 @@
         </li>
         <li class="hotel-card">
           <a href="#" class="hotel-image-container">
-            <img class="hotel-card-image" src="images/hotel-2.jpg" width="180" height="120"
+            <img class="hotel-card-image" src="images/catalog-hotels/hotel-2.jpg" width="300" height="206"
               alt="Desert Quail Inn Гостиница.">
           </a>
           <div class="hotel-card-content-container">
@@ -199,7 +202,7 @@
         </li>
         <li class="hotel-card">
           <a href="#" class="hotel-image-container">
-            <img class="hotel-card-image" src="images/hotel-3.jpg" width="180" height="120"
+            <img class="hotel-card-image" src="images/catalog-hotels/hotel-3.jpg" width="300" height="206"
               alt="Villas at Poco Diablo Апартаменты.">
           </a>
           <div class="hotel-card-content-container">
@@ -218,7 +221,7 @@
         </li>
         <li class="hotel-card">
           <a href="#" class="hotel-image-container">
-            <img class="hotel-card-image" src="images/hotel-4.jpg" width="180" height="120"
+            <img class="hotel-card-image" src="images/catalog-hotels/hotel-4.jpg" width="300" height="206"
               alt="GreenTree Inn Гостиница.">
           </a>
           <div class="hotel-card-content-container">
@@ -286,16 +289,19 @@
         <li class="footer-social-item">
           <a class="button" href="https://twitter.com/htmlacademy_ru">
             <span class="visually-hidden">Твиттер</span>
+            <img src="images/icons/social-twitter.svg" alt="Иконка Твиттер" width="18" height="15">
           </a>
         </li>
         <li class="footer-social-item">
           <a class="button" href="https://www.facebook.com/htmlacademy">
             <span class="visually-hidden">Фэйсбук</span>
+            <img src="images/icons/social-facebook.svg" alt="Иконка Фэйсбук" width="10" height="18">
           </a>
         </li>
         <li class="footer-social-item">
           <a class="button" href="https://www.youtube.com/c/HTMLAcademyRUS">
             <span class="visually-hidden">Ютуб</span>
+            <img src="images/icons/social-youtube.svg" alt="Иконка Ютуб" width="20" height="16">
           </a>
         </li>
       </ul>
@@ -305,7 +311,7 @@
     </section>
     <section class="footer-logo">
       <a class="footer-logo-address" href="https://htmlacademy.ru/">
-        <img class="footer-logo-image" src="images/logohtml.png " alt="Логотип HTML-Академии" width="114.9" height="32.9">
+        <img class="footer-logo-image" src="images/logohtmlacademy.svg" alt="Логотип HTML-Академии" width="115" height="34">
       </a>
     </section>
   </footer>
