--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html">
-          <img class="page-header-logo" alt="Логотип гостиницы «SEDONA»" src="images/logohotelsedona.svg" width="138" height="70">
+          <img class="page-header-logo" src="images/logohotelsedona.svg" width="139" height="70" alt="Логотип гостиницы «SEDONA»">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -25,11 +25,14 @@
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Поиск</span>
+              <img class="navigation-icon" src="images/icons/search.svg" width="18" height="18" alt="Иконка поиска">
             </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Избранное</span>
+              <img class="navigation-icon" src="images/icons/favorite.svg" width="18" height="17" alt="Иконка избранное">
+              <img class="navigation-icon" src="images/icons/number-icon.svg" width="20" height="20" alt="Иконка цифра">
             </a>
           </li>
           <li class="navigation-item">
@@ -44,7 +47,7 @@
       <section class="main-top">
         <h1 class="visually-hidden">Седона</h1>
         <span class="main-top-figure">
-          <img class="figure-vector" src="image/welcome.png" alt="Слоган о «SEDONA»" width="458" height="352">
+          <img class="figure-vector" src="images/welcome.svg"  width="458" height="352" alt="Слоган о «SEDONA»">
         </span>
       </section>
       <section class="main-description">
@@ -60,7 +63,7 @@
             <p class="advantages-description">
               Седона — не аттракцион для туристов, там течёт своя жизнь
             </p>
-            <img class="advantages-image" src="images/view.png" alt="Вид из окна" width="800" height="384">
+            <img class="advantages-image" src="images/real-town.jpg"  width="800" height="384" alt="Вид из окна">
             <div class="advantages-item-inside">
               <h3 class="advantages-item-inside-title">Жильё</h3>
               <p class="advantages-description">
@@ -82,7 +85,7 @@
             </div>
           </li>
           <li class="advantages-item">
-            <img class="advantages-image" src="images/bridge.png" alt="Мост дьявола" width="800" height="384">
+            <img class="advantages-image" src="images/devil-bridge.jpg"  width="800" height="384" alt="Мост дьявола">
             <h3 class="advantages-title">Там есть мост дьявола</h3>
             <p class="advantages-number">— №2 —</p>
             <p class="advantages-description">
@@ -135,16 +138,19 @@
           <li class="footer-social-item">
             <a class="button" href="https://twitter.com/htmlacademy_ru">
               <span class="visually-hidden">Твиттер</span>
+              <img src="images/icons/social-twitter.svg" alt="Иконка Твиттер" width="18" height="15">
             </a>
           </li>
           <li class="footer-social-item">
             <a class="button" href="https://www.facebook.com/htmlacademy">
               <span class="visually-hidden">Фэйсбук</span>
+              <img src="images/icons/social-facebook.svg" alt="Иконка Фэйсбук" width="10" height="18">
             </a>
           </li>
           <li class="footer-social-item">
             <a class="button" href="https://www.youtube.com/c/HTMLAcademyRUS">
               <span class="visually-hidden">Ютуб</span>
+              <img src="images/icons/social-youtube.svg" alt="Иконка Ютуб" width="20" height="16">
             </a>
           </li>
         </ul>
@@ -154,7 +160,7 @@
       </section>
       <section class="footer-logo">
         <a class="footer-logo-address" href="https://htmlacademy.ru/">
-          <img class="footer-logo-image" src="images/logohtml.png " alt="Логотип HTML-Академии" width="114.9" height="32.9">
+          <img class="footer-logo-image" src="images/logohtmlacademy.svg" alt="Логотип HTML-Академии" width="115" height="34">
         </a>
       </section>
     </footer>
